<resources>
<!--    TITLE/BANNER STRINGS-->
    <!--Todo: Think about a better title-->
    <string name="app_name">untitled</string>
<!--    TITLE/BANNER STRINGS-->
<!--    DYNAMIC STRINGS    -->
    <!--Todo: Use Dynamic String were possible-->
    <!--Todo: Change gold_str-->
    <string name="gold_str">%d</string>
<!--    DYNAMIC STRINGS    -->
<!--    PURCHASE STRINGS-->
    <string name="basic_purchase">Buy One \n (Owned %d)</string>
    <string name="sub_standard_purchase">Sub Standard \n (Cost 5)</string>
    <string name="standard_purchase">Buy Clicks like a cheater</string>
    <string name="upgraded_purchase">Buy Clicks like a cheater</string>
    <string name="staff_purchase">Buy Clicks like a cheater</string>
    <string name="tech_purchase">Buy Clicks like a cheater</string>
    <string name="master_purchase">Buy Clicks like a cheater</string>
    <string name="senior_master_purchase">Buy Clicks like a cheater</string>
    <string name="chief_master_purchase">Buy Clicks like a cheater</string>
<!--    PURCHASE STRINGS-->
<!--    BUTTON STRINGS-->
    <string name="basic_str" >Most Basic Click</string>
    <string name="sub_standard_str" >Sub Standard Click</string>
    <string name="standard_str" >Click</string>
    <string name="upgrade_standard_str" >Upgrade Click</string>
    <string name="staff_str" >Staff Click</string>
    <string name="technical_str" >Technical Click</string>
    <string name="master_str" >Master Click</string>
    <string name="senior_master_str" >Senior Master Click</string>
    <string name="chief_master_str" >Chief Master Click</string>
 <!--    BUTTON STRINGS-->
</resources>
